<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativelayout_help_top"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout_profile_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/relativelayout_help_top">

                <TextView
                    android:id="@+id/textview_profile_account_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/main_my_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressbar_profile_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_alignTop="@id/relativelayout_profile_account_user"
                    android:layout_alignBottom="@id/relativelayout_profile_account_user"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <RelativeLayout
                    android:id="@+id/relativelayout_profile_account_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_below="@+id/textview_profile_account_title"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp">

                    <LinearLayout
                        android:id="@+id/linearlayout_profile_background"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:background="@drawable/profile_icon_background"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageview_profile_account_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:importantForAccessibility="no" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textview_profile_account_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/linearlayout_profile_background"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal"
                        tools:text="윤성빈" />

                    <TextView
                        android:id="@+id/textview_profile_account_user_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textview_profile_account_username"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@+id/linearlayout_profile_background"
                        android:textColor="@color/darkGray"
                        android:textSize="@dimen/small"
                        tools:text="#RnP255" />

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:importantForAccessibility="no"
                        android:src="@drawable/arrow_right" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearlayout_profile_border"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/relativelayout_profile_account_user"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@color/lightGray"
                    android:orientation="horizontal" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/linearlayout_profile_border">

                    <TextView
                        android:id="@+id/textview_profile_setting_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/setting"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerview_profile_setting"
                        android:layout_width="match_parent"
                        android:layout_height="500dp"
                        android:layout_below="@+id/textview_profile_setting_title"
                        android:layout_marginLeft="20dp"

                        android:layout_marginRight="20dp"
                        android:scrollbarFadeDuration="0"
                        android:scrollbars="vertical" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>