...
    <string name="change">변경</string>
    <string name="quiz">퀴즈</string>
    <string name="notification">알림</string>
    <string name="setting">설정</string>
    <string name="inquiry">문의</string>
    <string name="move">이동</string>
    <string name="name">이름</string>
    <string name="statistics">통계</string>
    <string name="etc">기타</string>
    <string name="sign_out">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="score">점</string>
    <string name="count">개</string>
...
    <string name="docs_more_move_docs">폴더 이동</string>
    <string name="docs_more_delete_docs">문서 삭제</string>

    <string name="profile_title">내 정보</string>
    <string name="profile_account_username">성빈클론(꼭 지우기)</string>
    <string name="profile_account_code">유저 코드</string>
    <string name="profile_alert_setting">알림 설정</string>
    <string name="profile_inquiry">문의</string>
    <string name="profile_clean_data">임시 공간 삭제</string>
    <string name="profile_service_info">서비스 정보</string>
    <string name="profile_confirm">접수</string>

    <string name="input_title">제목을 입력해주세요.</string>
    <string name="input_description">내용을 입력해주세요.</string>

    <string name="theme_mode">테마 모드</string>
...
