...
                android:onClick="@{() -> viewModel.onBackClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_nickname_edit_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/notosans_regular"
                android:textSize="@dimen/large"
                android:onClick="@{() -> viewModel.onChangeClick()}"
...
            android:textColor="@color/black"
            android:textSize="@dimen/big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_nickname_edit_header" />

        <EditText
            android:id="@+id/edittext_nickname_edit_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="username"
...
